[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://ui/PlayerInfoPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/NameInput.gd" type="Script" id=5]
[ext_resource path="res://assets/font/largeFont.tres" type="DynamicFont" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Welcome" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.701961, 0.345098, 0.764706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Welcome"]
margin_left = 274.0
margin_top = 80.0
margin_right = 574.0
margin_bottom = 138.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Säkerhetshjältarna"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Welcome"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Welcome/HBoxContainer"]
margin_left = 309.0
margin_right = 539.0
margin_bottom = 500.0
rect_min_size = Vector2( 230, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Welcome/HBoxContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 230.0
margin_bottom = 331.0
rect_min_size = Vector2( 100, 0 )

[node name="NameInput" type="LineEdit" parent="Welcome/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 230.0
margin_bottom = 33.0
placeholder_text = "Ditt namn"
script = ExtResource( 5 )

[node name="HostButton" type="Button" parent="Welcome/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 230.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 20 )
text = "Skapa ett rum"

[node name="Title" type="Label" parent="Welcome/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 230.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 20 )
custom_colors/font_color = Color( 0.317647, 0.2, 0.6, 1 )
text = "Gå med i ett rum"
valign = 2

[node name="FindRoomButton" type="Button" parent="Welcome/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 230.0
margin_bottom = 126.0
rect_min_size = Vector2( 30, 0 )
text = "Hitta ett rum"

[node name="HBoxContainer" type="HBoxContainer" parent="Welcome/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 230.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 20 )

[node name="CodeInput" type="LineEdit" parent="Welcome/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 154.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "Rummets kod"

[node name="JoinButton" type="Button" parent="Welcome/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 230.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 0 )
text = "Gå med"

[node name="Control" type="Control" parent="Welcome/HBoxContainer"]
margin_left = 543.0
margin_right = 543.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Welcome"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -29.0
margin_right = 185.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0.890196, 0.0392157, 0.0392157, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.701961, 0.345098, 0.764706, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby/HBoxContainer"]
margin_left = 152.0
margin_right = 460.0
margin_bottom = 500.0
alignment = 1

[node name="CodeWrapper" type="Control" parent="Lobby/HBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 308.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeLabel" type="RichTextLabel" parent="Lobby/HBoxContainer/VBoxContainer/CodeWrapper"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = -105.0
margin_bottom = -15.0
rect_min_size = Vector2( 0, 10 )
focus_mode = 2
custom_colors/default_color = Color( 0.341176, 0.0156863, 0.313726, 1 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
selection_enabled = true

[node name="CopyCodeButton" type="Button" parent="Lobby/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 67.0
margin_right = 140.0
margin_bottom = 87.0
rect_min_size = Vector2( 0, 20 )
text = "Copy code"

[node name="TeamsContainer" type="HBoxContainer" parent="Lobby/HBoxContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 308.0
margin_bottom = 322.0
custom_constants/separation = 24

[node name="GoodGuys" type="VBoxContainer" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer"]
margin_right = 308.0
margin_bottom = 144.0

[node name="PlayerInfoContainer" type="GridContainer" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer/GoodGuys"]
margin_right = 308.0
margin_bottom = 144.0
columns = 3

[node name="PlayerInfoPanel" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer/GoodGuys/PlayerInfoContainer" instance=ExtResource( 3 )]
margin_bottom = 70.0

[node name="PlayerInfoPanel2" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer/GoodGuys/PlayerInfoContainer" instance=ExtResource( 3 )]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 70.0

[node name="PlayerInfoPanel3" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer/GoodGuys/PlayerInfoContainer" instance=ExtResource( 3 )]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 70.0

[node name="PlayerInfoPanel4" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer/GoodGuys/PlayerInfoContainer" instance=ExtResource( 3 )]
margin_top = 74.0
margin_bottom = 144.0

[node name="PlayerInfoPanel5" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer/GoodGuys/PlayerInfoContainer" instance=ExtResource( 3 )]
margin_left = 104.0
margin_top = 74.0
margin_right = 204.0
margin_bottom = 144.0

[node name="PlayerInfoPanel6" parent="Lobby/HBoxContainer/VBoxContainer/TeamsContainer/GoodGuys/PlayerInfoContainer" instance=ExtResource( 3 )]
margin_left = 208.0
margin_top = 74.0
margin_right = 308.0
margin_bottom = 144.0

[node name="StartButton" type="Button" parent="Lobby/HBoxContainer/VBoxContainer"]
margin_top = 326.0
margin_right = 308.0
margin_bottom = 355.0
rect_min_size = Vector2( 0, 20 )
text = "Starta Spelet!"

[node name="VBoxContainer2" type="VBoxContainer" parent="Lobby/HBoxContainer"]
margin_left = 464.0
margin_right = 700.0
margin_bottom = 500.0

[node name="RegenerateHealthCheckBox" type="CheckBox" parent="Lobby/HBoxContainer/VBoxContainer2"]
margin_right = 236.0
margin_bottom = 31.0
text = "Regenerera hälsa"

[node name="MonsterLootDropCheckBox" type="CheckBox" parent="Lobby/HBoxContainer/VBoxContainer2"]
margin_top = 35.0
margin_right = 236.0
margin_bottom = 66.0
text = "Monster släpper delar"

[node name="AutoAimCheckBox" type="CheckBox" parent="Lobby/HBoxContainer/VBoxContainer2"]
margin_top = 70.0
margin_right = 236.0
margin_bottom = 101.0
pressed = true
text = "Sikta automatiskt"

[connection signal="text_changed" from="Welcome/HBoxContainer/VBoxContainer/VBoxContainer/NameInput" to="Welcome/HBoxContainer/VBoxContainer/VBoxContainer/NameInput" method="_on_NameInput_text_changed"]
[connection signal="pressed" from="Welcome/HBoxContainer/VBoxContainer/VBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Welcome/HBoxContainer/VBoxContainer/VBoxContainer/FindRoomButton" to="." method="_on_FindRoomButton_pressed"]
[connection signal="pressed" from="Welcome/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Lobby/HBoxContainer/VBoxContainer/CopyCodeButton" to="." method="_on_CopyCodeButton_pressed"]
[connection signal="pressed" from="Lobby/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="toggled" from="Lobby/HBoxContainer/VBoxContainer2/RegenerateHealthCheckBox" to="." method="_on_RegenerateHealthCheckBox_toggled"]
[connection signal="toggled" from="Lobby/HBoxContainer/VBoxContainer2/MonsterLootDropCheckBox" to="." method="_on_MonsterLootDropCheckBox_toggled"]
[connection signal="toggled" from="Lobby/HBoxContainer/VBoxContainer2/AutoAimCheckBox" to="." method="_on_AutoAimCheckBox_toggled"]
